--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,9 +22,11 @@
   </title>
 
   <!-- CSS -->
-  <link rel="shortcut icon" href="/tale/img/favicon.png" title="Favicon"/>
+  <link rel="shortcut icon" href="/space/img/favicon.png" title="Favicon"/>
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
+  <link rel="stylesheet" type="text/css" href="/space/css/part.css">
   <a href="http://foo.com/bar.html#disqus_thread"></a>
-  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+
 </head>
