UPDATE: 2 nav bar with different properties

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,6 +15,7 @@ footer,
 .nav {
   box-shadow: 0 2px 2px -2px $shadow-color;
   overflow: auto;
+  padding: 15px 0px;
 
   &-container {
     margin: 1rem auto;
@@ -64,6 +65,61 @@ footer,
     font-family: $sans-font;
   }
 }
+
+.nav2 {
+  box-shadow: 0 2px 2px -2px $shadow-color;
+  overflow: auto;
+  padding: 0px 0px;
+
+  &-container {
+    margin: 1rem auto;
+    position: relative;
+    text-align: center;
+  }
+
+  &-title {
+    @include transition(all .2s ease-out);
+    color: $default-color;
+    display: inline-block;
+    margin: 0;
+    padding-right: .2rem;
+
+    &:hover,
+    &:focus {
+      opacity: .6;
+    }
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 1rem 0 0;
+    padding: 0;
+    text-align: center;
+  }
+
+  li {
+    @include transition(all .2s ease-out);
+    color: $default-color;
+    display: inline-block;
+    opacity: .6;
+    padding: 0 2rem 0 0;
+
+    &:last-child {
+      padding-right: 0;
+    }
+
+    &:hover,
+    &:focus {
+      opacity: 1;
+    }
+  }
+
+  a {
+    color: $default-color;
+    font-family: $sans-font;
+  }
+}
+
 
 @media (min-width: 600px) {
   .nav {
