--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,22 +4,15 @@
   {% include head.html %}
 
   <body>
-    <nav class="nav">
+    <nav class="nav2">
       <div class="nav-container">
         <a href="{{ site.baseurl }}/">
-          <img alt="Ankit Solanki" style="display: inline-block;" height="30px" width="30px" src="/space/img/favicon.png"><h2 class="nav-title" style="font-family: 'Gloria Hallelujah';">{{ site.title }}</h2>
+          <img alt="Ankit Solanki" style="display: inline-block;" height="30px" width="30px" src="/space/img/favicon.png"><h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
-          <li><a href="{{ site.baseurl }}/">Writer</a></li>
-          <li><div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
-            <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
-            </div>
-          </div></li>
+          <li><a href="{{ '/writings' | prepend: site.baseurl }}/">Writings</a></li>
+          <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li>
           <li><a href="{{ '/projects' | prepend: site.baseurl }}">Projects</a></li>
         </ul>
     </div>
