--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,11 +4,9 @@
   {% include head.html %}
 
   <body>
+    <center>
     <nav class="nav">
       <div class="nav-container">
-        <a href="{{ site.baseurl }}/">
-          <img alt="Ankit Solanki" style="display: inline-block;" height="20px" width="20px" src="/space/img/favicon.png"><h2 class="nav-title">{{ site.title }}</h2>
-        </a>
         <ul>
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ '/writings' | prepend: site.baseurl }}/">Writings</a></li>
@@ -16,15 +14,15 @@
           <li><a href="{{ '/projects' | prepend: site.baseurl }}">Projects</a></li>
         </ul>
     </div>
-  </nav>
-
+    </nav>
+    </center>
     <main>
       {{ content }}
     </main>
 
     <footer>
       <span>
-        Be Alive and Do what the fuck you want to!
+        An idea is an illusion.
       </span>
       <span>
         &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> <b>Ankit</b>
