--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     <footer>
       <span>
-        Be Alive and Do what the fuck you want to!
+        180-degree turns are encouraged.
       </span>
       <span>
         &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> <b>Ankit</b>
