--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,7 @@
         <ul>
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ '/writings' | prepend: site.baseurl }}/">Writings</a></li>
+          <li><a href="{{ '/quotes' | prepend: site.baseurl }}">Quotes</a></li>
           <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li>
           <li><a href="{{ '/projects' | prepend: site.baseurl }}">Projects</a></li>
         </ul>
