main home page added

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,5 +28,7 @@
   <a href="http://foo.com/bar.html#disqus_thread"></a>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 
 </head>
