UPDATE: layouts changed accordingly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,10 @@
         </a>
         <ul>
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+          <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li>
           <li><a href="{{ '/writings' | prepend: site.baseurl }}/">Writings</a></li>
           <li><a href="{{ '/philosophy' | prepend: site.baseurl }}">Philosophy</a></li>
-          <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li>
+          <li><a href="{{ '/academic' | prepend: site.baseurl }}">Academic</a></li>
           <li><a href="{{ '/projects' | prepend: site.baseurl }}">Projects</a></li>
         </ul>
     </div>
