--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,10 @@
       <div class="nav-container">
         <ul>
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+          <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li>
           <li><a href="{{ '/writings' | prepend: site.baseurl }}/">Writings</a></li>
           <li><a href="{{ '/philosophy' | prepend: site.baseurl }}">Philosophy</a></li>
-          <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li>
+          <li><a href="{{ '/academic' | prepend: site.baseurl }}">Academic</a></li>
           <li><a href="{{ '/projects' | prepend: site.baseurl }}">Projects</a></li>
         </ul>
     </div>
